--- a/WpfDownloadPlay/WpfDownloadPlay/MainWindow.xaml
+++ b/WpfDownloadPlay/WpfDownloadPlay/MainWindow.xaml
@@ -5,8 +5,10 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WpfDownloadPlay"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="MainWindow" Height="562" Width="1000" WindowStartupLocation="CenterScreen">
     <Grid>
-        
+        <Frame Name="frame_MainWindow" Content="Frame" NavigationUIVisibility="Hidden" Width="992" HorizontalContentAlignment="Stretch" VerticalContentAlignment="Stretch" HorizontalAlignment="Right" Height="532" VerticalAlignment="Bottom"/>
+        <!--<TextBlock HorizontalAlignment="Left" Margin="301,191,0,0" TextWrapping="Wrap" Text="TextBlock" VerticalAlignment="Top"/>-->
+
     </Grid>
 </Window>
